Tickerbar scrollbar for -moz browsers; some css fixes

--- a/src/css/chart/chart.sass
+++ b/src/css/chart/chart.sass
@@ -8,6 +8,7 @@
 
 	button
 		width: 2.5em
+		height: 2.5em
 		font-size: 0.95em
 		font-weight: bold
 		color: white
@@ -42,4 +43,5 @@
 	#bar-wrapper
 		button
 			width: 3em
+			height: 3em
 			font-size: 1em
