--- a/src/css/style.sass
+++ b/src/css/style.sass
@@ -44,10 +44,14 @@ body
 
 // Media query
 
-//@media (min-width: 768px)
-//  #app
-//    font-size: 12px
+@media (min-width: 768px)
+  #app
+    font-size: 12px
 
-@media only screen and (min-device-width: 834px) and (max-device-width: 1112px) and (-webkit-min-device-pixel-ratio: 2)
+@media screen and (min-device-width: 834px) and (max-device-width: 1112px) and (-webkit-min-device-pixel-ratio: 2)
   #app
     font-size: 16px
+
+  @media screen and (min-width: 1200px )
+    #app
+      font-size: 16px
