--- a/src/css/tickerbar/tickerbar.sass
+++ b/src/css/tickerbar/tickerbar.sass
@@ -2,7 +2,9 @@
 #tickerbar-wrapper
     display: flex
     justify-content: start
-    overflow-x: auto
+    overflow-x: scroll
+    scrollbar-width: thin
+    scrollbar-color: silver black
 
 #tickerbar-wrapper::-webkit-scrollbar
     background-color: black
@@ -54,6 +56,7 @@
     grid-template-rows: 100%
     grid-template-columns: 30% 50%
     justify-items: end
+    padding: 0
 
 .ticker-price-pct
     padding-left: 0.15em
